--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueEYE 02</title>
+
+    <!-- Add manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- Tell the browser it's a PWA -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <!-- Tell iOS it's a PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Make sure theme-color is defined -->
+    <meta name="theme-color" content="#536878">
+    
     <link rel="shortcut icon" type="image/x-icon" href="/app/assets/images/favicon.ico">
+
+    <style type="text/css">
+        body {
+          margin: 0;
+          padding: 0;
+          font-family: sans-serif;
+        }
+        .App {
+          text-align: center;
+        }
+        .App-header {
+          background-color: #222;
+          height: 150px;
+          padding: 20px;
+          color: white;
+        }
+        .App-intro {
+          font-size: large;
+        }
+      </style>
+
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <div class="App">
+            <div class="App-header">
+              <h2>Home</h2>
+            </div>
+            <p class="App-intro">
+              Loading site...
+            </p>
+        </div>
+    </div>
 
     <script id="shader-f-multilight-3d" type="x-shader/x-fragment">
         precision mediump float;
@@ -230,6 +270,24 @@
 
           v_texCoord = a_texCoord;
       }
+</script>
+
+<script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('service-worker.js').then(function(registration) {
+          // Registration was successful
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function(err) {
+          // registration failed :(
+          console.log('ServiceWorker registration failed: ', err);
+        }).catch(function(err) {
+          console.log(err)
+        });
+      });
+    } else {
+      console.log('service worker is not supported');
+    }
 </script>
   
 </body>
