PWA setup fixes

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <title>BlueEYE 02</title>
 
     <!-- Add manifest -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <!-- Tell the browser it's a PWA -->
     <meta name="mobile-web-app-capable" content="yes">
     <!-- Tell iOS it's a PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Make sure theme-color is defined -->
     <meta name="theme-color" content="#536878">
-    
+
     <link rel="shortcut icon" type="image/x-icon" href="/app/assets/images/favicon.ico">
 
     <style type="text/css">
