updates to the blue-eye project. User experience

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- Make sure theme-color is defined -->
     <meta name="theme-color" content="#536878">
 
-    <link rel="shortcut icon" type="image/x-icon" href="/fav.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <style type="text/css">
         body {
